--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "next": "14.2.1",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^5.0.1"
+    "react-icons": "^5.0.1",
+    "react-multi-carousel": "^2.8.5",
+    "swiper": "^11.1.1"
   },
   "devDependencies": {
     "postcss": "^8",
