--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^18",
     "react-icons": "^5.0.1",
     "react-multi-carousel": "^2.8.5",
+    "react-spinners": "^0.13.8",
     "swiper": "^11.1.1"
   },
   "devDependencies": {
