--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
+    "react-loader-spinner": "^6.1.6",
     "react-multi-carousel": "^2.8.5",
     "react-spinners": "^0.13.8",
     "swiper": "^11.1.1"
