--- a/package.json
+++ b/package.json
@@ -9,18 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@opentelemetry/sdk-trace-node": "^1.23.0",
     "framer-motion": "^11.0.28",
-    "next": "14.2.1",
-    "react": "^18",
-    "react-dom": "^18",
+    "next": "^14.2.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-loader-spinner": "^6.1.6",
     "react-multi-carousel": "^2.8.5",
     "react-spinners": "^0.13.8",
+    "sharp": "^0.33.3",
     "swiper": "^11.1.1"
   },
   "devDependencies": {
     "postcss": "^8",
-    "tailwindcss": "^3.4.1"
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5.4.5"
   }
 }
