--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "swiper": "^11.1.1"
   },
   "devDependencies": {
+    "@types/node": "^20.12.7",
+    "@types/react": "^18.2.79",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.4.5"
